# lidar-slam

./: .gitignore  .gitmodules
behavior_trees/: ackermann_nav.xml
config/: ekf.yaml  nav.rviz  nav2_params_ackermann.yaml  slam.rviz  slam_toolbox_ackermann.yaml  slam_toolbox_real.yaml  slam_toolbox_sim.yaml
docs/: implementation-plan.md  real-robot-control-plan.md  simulation-plan.md  底盘485通信协议.md
docs/superpowers/plans/: 2026-05-11-ackermann-ros2-control-plan.md
docs/superpowers/specs/: 2026-05-11-ackermann-ros2-control-design.md
launch/: real_slam.launch.py  rplidar_s2l.launch.py  sim_ackermann.launch.py  sim_ackermann_nav.launch.py  sim_slam.launch.py
maps/: ackermann_map.pgm  ackermann_map.yaml  real_map.pgm  real_map.yaml  real_map_big_fix.pgm  real_map_big_fix.yaml  real_map_small_fix.pgm  real_map_small_fix.yaml
models/ackermann/: ackermann.urdf  ackermann.xacro  model.config
models/sim_robot/: model.config  model.sdf
scripts/: ackermann_keyboard_teleop.py  cmd_vel_bridge.py  diagnose_ackermann.sh  load_controllers.py  map_to_sdf.py  real_save_map.sh  real_slam.sh  rplidar_s2_view.sh  sim_ackermann_nav.sh  sim_ackermann_save_map.sh  sim_ackermann_slam.sh  sim_ackermann_teleop.sh  sim_check.sh  sim_save_map.sh  sim_slam.sh  sim_teleop.py  sim_teleop.sh  test_ackermann_teleop_unit.py  view_tf_tree.sh
src/ackermann_control/: CMakeLists.txt  package.xml
src/ackermann_control/config/: ackermann_params.yaml  gz_ros2_control.yaml
src/ackermann_control/include/ackermann_control/: vehicle_controller.hpp  visibility_control.h
src/ackermann_control/launch/: ackermann_control.launch.py
src/ackermann_control/src/: vehicle_controller.cpp
worlds/: ackermann_test.sdf  real_map_big_fix.sdf  slam_test.sdf
